--- a/www/style/default.css
+++ b/www/style/default.css
@@ -1,5 +1,6 @@
 body {
     font-family: Helvetica, Arial, sansserif;
+    color: #000011;
 }
 
 nav.breadcrumbs li {
@@ -13,12 +14,51 @@ nav.breadcrumbs li:after {
     content: " >> ";
 }
 
-table, th, td {
-    border: 1px solid;
+section {
+    clear: both;
+}
+
+table {
+    margin: 2ex 0;
+    border-collapse: collapse;
+    font-size: 90%;
+    min-width: 50%;
+}
+
+thead {
+    border-bottom: 2px solid #aaaaff;
+}
+
+table a {
+    text-decoration: none;
+    color: black;
+}
+
+table a:hover {
+    color: blue;
+}
+
+table caption {
+    text-align: left;
+    margin: 2ex 0;
+    font-style: italic;
+}
+
+table caption:after {
+    content: ":";
+}
+
+tr {
+    border-bottom: 1px solid #ddddff;
+}
+
+tbody tr:hover {
+    background: #ffffdd;
 }
 
 th, td {
-    padding: .5ex;
+    text-align: left;
+    padding: .5ex 1ex;
 }
 
 label {
