Tweaked CSS to clean up forms.
Show latest import on dataset page.

Switch to table for import history, and add number of rows.

Closes #3

--- a/www/style/default.css
+++ b/www/style/default.css
@@ -72,12 +72,9 @@ label span {
     color: #aaaaaa;
 }
 
-label input {
+label input, label select {
+    background: white;
     width: 100%;
     max-width: 30em;
-}
-
-label select {
-    width: 100%;
-    max-width: 30em;
+    padding: 0.2ex;
 }
