--- a/www/style/default.css
+++ b/www/style/default.css
@@ -84,6 +84,10 @@ th, td {
     padding: .5ex 1ex;
 }
 
+nav.options {
+    margin: 2ex 0;
+}
+
 nav.options li {
     display: inline;
     margin-right: .5em;
