Move dataset upload history to its own page - closes #19
Add recent uploads to home page

Style source page better

Mess around with charts

--- a/www/style/default.css
+++ b/www/style/default.css
@@ -86,14 +86,22 @@ th, td {
 
 nav.options {
     margin: 2ex 0;
+    list-style: none;
+}
+
+nav.options:after {
+    display: block;
+    content: "";
+    clear: both;
 }
 
 nav.options li {
-    display: inline;
+    float: left;
     margin-right: .5em;
     border: 1px solid #aaaaaa;
     padding: .5ex;
     background: #eeeeee;
+    text-align: center;
 }
 
 nav.options li a {
