Restore hierarchical tags, and make more general.
Fix JavaScript so that charts respect filters.

--- a/www/style/default.css
+++ b/www/style/default.css
@@ -155,3 +155,15 @@ nav.main:after, nav.options:after {
     clear: both;
 }
 
+.filters {
+    font-size: 90%;
+    margin-top: 2ex;
+}
+
+.filters span:after {
+    content: ', ';
+}
+
+.filters span:last-child:after {
+    content: '';
+}
