Started data.json code module for getting data from DB.
Started refactoring /report to show datasets

Added JSON output.

--- a/www/style/default.css
+++ b/www/style/default.css
@@ -167,3 +167,8 @@ nav.main:after, nav.options:after {
 dt {
     font-weight: bold;
 }
+
+.tag {
+    font-family: monospace;
+    font-weight: normal;
+}
