Refactor to flatten dataset part of information architecture (no longer show under sources).

--- a/www/style/default.css
+++ b/www/style/default.css
@@ -109,6 +109,10 @@ label {
     width: 33.4%;
 }
 
+.col4 li {
+    width: 25%;
+}
+
 nav.main, nav.options {
     margin: 0;
     list-style: none;
